data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1575.wast
;; 6. **Test Name: Stack-Polymorphic Violation**    **Description:** Simulate a scenario where a `br_if` instruction violates stack-polymorphic rules by improperly adjusting the stack before the instruction.    **Infinite Loop Relation:** Mismanagement of the stack polymorphism can prevent appropriate loop termination, resulting in infinite looping.

(assert_invalid
  (module
    (func $stack-polymorphic-violation
      (block
        (i32.const 1)
        (i32.const 0)
        (br_if 0 (i32.const 1))
        (i32.eqz)
      )
    )
  )
  "type mismatch"
)